package combinatoric.basic;

public interface InitialFilling {

    /**
     * Заполнить текущий объект начальными значениями
     */
    void initialFill();

}
