package combinatoric.basic;

public interface NonRecursiveSearch {

    void nonRecursivePrintAllObjects();

}
