package combinatoric.basic;

public interface RecursiveSearch {

    void recursivePrintAllObjects();

}
